--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Generate Datas
 
 on:
   schedule: # execute every 12 hours
-    - cron: '30 5 * * 2,4'
+    - cron: "* */12 * * *"
   workflow_dispatch:
 
 jobs:
